test/SemanticAnalysis/LifetimeMethods/InvalidArgumentCountMove.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__move' has incorrect argument count
	TestClass __move(unused int i) noexcept {
		return @();
	}
}

// CHECK: 1 error generated.
